# python-cli

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
scripts/: gen_ref_pages.py
