[tool.poetry]
name = "pycli"
version = "0.1.0"
description = "Python CLI Template"
authors = ["Brett Fitzpatrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-table-reader-plugin = "^2.2.2"
mkdocs-include-markdown-plugin = "^6.2.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}


[tool.poetry.scripts]
pycli = "pycli.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
